Did some major enhancements